# spark-delta-minio-sqlserver

./: .env.example  .gitignore  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
conceitos/delta_lake/: index.html
conceitos/tabelas/: index.html
data/: acao.csv  credor.csv  empenho.csv  fonte_recurso.csv  historico_preco.csv  item_empenho.csv  liquidacao.csv  orgao.csv  pagamento.csv  programa.csv  unidade.csv
docs/: index.md  setup.md
docs/conceitos/: delta_lake.md  tabelas.md
docs/notebooks/: 00_setup.md  01_extracao.md  02_delta.md  03_dml.md
notebook/: 00_setup_sqlserver.ipynb  01_sqlserver_to_minio_csv.ipynb  02_csv_to_delta.ipynb  03_dml_delta.ipynb
notebooks/00_setup/: index.html
notebooks/01_extracao/: index.html
notebooks/02_delta/: index.html
notebooks/03_dml/: index.html
search/: search_index.json
setup/: index.html
