[project]
name = "spark-delta-minio-despesa"
version = "0.1.0"
description = "Pipeline de Engenharia de Dados — Despesa Publica Federal com Apache Spark, Delta Lake e MinIO"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "boto3>=1.34.0",
    "delta-spark==3.2.0",
    "jupyterlab>=4.2.5",
    "ipykernel>=6.29.0",
    "pandas>=2.2.0",
    "pyspark==3.5.3",
    "python-dotenv>=1.0.0",
]

# Nota: o driver JDBC do SQL Server (mssql-jdbc) é gerenciado
# automaticamente pelo Spark via Maven Central em tempo de execução.
# Nao e necessario instalar ODBC nem nenhum driver nativo no SO.
